# QSpectrogram

./: CMakeLists.txt  README.md  resources.qrc  setup.iss
include/: fftw_allocator.h  form_specviewer1.h  form_specviewer2.h  form_specviewer3.h  mainwindow.h  spectrumviewer.h  specviewer_axisfreq.h  specviewer_axistime.h  tabviewercontainer.h
sampledata/: makewbdata.py
src/: form_specviewer1.cpp  form_specviewer1.ui  form_specviewer2.cpp  form_specviewer2.ui  form_specviewer3.cpp  form_specviewer3.ui  main.cpp  mainwindow.cpp  mainwindow.ui  spectrumviewer.cpp  spectrumviewer.ui  specviewer_axisfreq.cpp  specviewer_axisfreq.ui  specviewer_axistime.cpp  specviewer_axistime.ui  tabviewercontainer.cpp  tabviewercontainer.ui
